# reference_motion_publisher

./: CMakeLists.txt  package.xml
motion_data/: motion_data_m0_D1_007_KAN01_001.json  motion_data_m0_D1_007_KAN01_001_interp.json  motion_data_m0_D1_009_KAN01_001_mid.json  motion_data_m0_D1_009_KAN01_001_mid_interp.json  motion_data_m0_D1_025_KAN01_001.json  motion_data_m0_D1_025_KAN01_001_interp.json  motion_data_m0_D1_047z_KAN01_002_1.json  motion_data_m0_D1_047z_KAN01_002_1_interp.json  motion_data_m0_D1_053_KAN01_001_1_1.json  motion_data_m0_D1_053_KAN01_001_1_1_interp.json  motion_data_m0_D1_053_KAN01_001_2_1.json  motion_data_m0_D1_053_KAN01_001_2_1_interp.json  motion_data_m0_D1_053_KAN01_002_1_3.json  motion_data_m0_D1_053_KAN01_002_1_3_interp.json  motion_data_m0_D1_053_KAN01_002_2_2.json  motion_data_m0_D1_053_KAN01_002_2_2_interp.json  motion_data_m0_D1_055_KAN01_001_2_2.json  motion_data_m0_D1_055_KAN01_001_2_2_interp.json  motion_data_m0_D1_055_KAN01_001_5.json  motion_data_m0_D1_055_KAN01_001_5_interp.json  motion_data_m0_D1_061_KAN01_001_2_2.json  motion_data_m0_D1_061_KAN01_001_2_2_interp.json  motion_data_m0_D1_061z_KAN01_003_1_1.json  motion_data_m0_D1_061z_KAN01_003_1_1_interp.json  motion_data_m0_D1_071_KAN02_002_1.json  motion_data_m0_D1_071_KAN02_002_1_interp.json  motion_data_m0_D1_ex01_KAN01_001.json  motion_data_m0_D1_ex01_KAN01_001_interp.json  motion_data_m0_D1_ex03_KAN02_003_2_low.json  motion_data_m0_D1_ex03_KAN02_003_2_low_interp.json  motion_data_m0_D1_ex03_KAN02_003_5.json  motion_data_m0_D1_ex03_KAN02_003_5_interp.json  motion_data_m0_D1_ex03_KAN02_003_6_low.json  motion_data_m0_D1_ex03_KAN02_003_6_low_interp.json  motion_data_m0_D1_ex03_KAN02_003_9.json  motion_data_m0_D1_ex03_KAN02_003_9_interp.json  (+148 more)
src/: reference_motion_node.py  (+1 more)
